Fix width of Fashion image on mobile

--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@ a:hover h2 {
 .food,
 .movies,
 .travel,
-.travel2 {
+.travel2,
+.fashion {
   width: 100%;
 }
 
